# GalaxyArcade

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml
source/: main.cpp
source/core/: Attachable.cpp  Attachable.h  Bitmap.cpp  Bitmap.h  Buffer.h  GraphicsFactory.cpp  GraphicsFactory.h  GraphicsObject.cpp  GraphicsObject.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  Texture2D.cpp  Texture2D.h
source/core/opengl/: Buffer.cpp  Buffer.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.h
source/graphics/: Buffer.cpp  GraphicsFactory.cpp  GraphicsFactory.h  ShaderProgram.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteBuffer.cpp  SpriteBuffer.h  SpriteRegion.cpp  SpriteRegion.h  SpriteRenderer.cpp  SpriteRenderer.h  Tile.cpp  Tile.h  TileRenderer.cpp  TileRenderer.h
source/math/: Matrix.cpp  Matrix.h  Rect.cpp  Rect.h  Transformation.cpp  Transformation.h  Vec2.cpp  Vec2.h  Vector2f.cpp  Vector2f.h
source/platform/: Buffer.cpp  Buffer.h  ElementArray.cpp  ElementArray.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  VertexBuffer.cpp  VertexBuffer.h
source/platform/core/: Attachable.cpp  Attachable.h  PlatformEntity.cpp  PlatformEntity.h
source/util/: Bitmap.cpp  Bitmap.h  BitmapLoader.cpp  BitmapLoader.h  FileReader.cpp  FileReader.h  GameTime.cpp  GameTime.h  Image.cpp  Image.h  Resource.h
